--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jade": "^1.9.2",
     "method-override": "^2.3.1",
     "morgan": "^1.5.1",
+    "nodemon": "^1.3.7",
     "snoocore": "^2.7.2"
   }
 }
