--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "d3": "^3.5.5",
     "express": "^4.12.2",
     "github": "^0.2.3",
+    "hacker-news-api": "^2.0.0",
     "jade": "^1.9.2",
+    "jsdom": "^4.1.0",
     "lodash": "^3.5.0",
     "method-override": "^2.3.1",
     "morgan": "^1.5.1",
     "nodemon": "^1.3.7",
     "q": "^1.2.0",
     "qs": "^2.4.0",
+    "sentiment": "^1.0.2",
     "snoocore": "^2.7.2"
   }
 }
